More moderate use of number fractions

--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -24,7 +24,7 @@
 \vs p012 1:9 \ublistelem{6.}\bibnobreakspace The Fourth and Outermost Space Level.
 \vs p012 1:10 \pc \bibemph{Havona,} the central universe, is not a time creation; it is an eternal existence. This never\hyp{}beginning, never\hyp{}ending universe consists of one billion spheres of sublime perfection and is surrounded by the enormous dark gravity bodies. At the centre of Havona is the stationary and absolutely stabilized Isle of Paradise, surrounded by its 21 satellites. Owing to the enormous encircling masses of the dark gravity bodies about the fringe of the central universe, the mass content of this central creation is far in excess of the total known mass of all seven sectors of the grand universe.
 \vs p012 1:11 \pc \bibemph{The Paradise\hyp{}Havona System,} the eternal universe encircling the eternal Isle, constitutes the perfect and eternal nucleus of the master universe; all seven of the superuniverses and all regions of outer space revolve in established orbits around the gigantic central aggregation of the Paradise satellites and the Havona spheres.
-\vs p012 1:12 \bibemph{The Seven Superuniverses} are not primary physical organizations; nowhere do their boundaries divide a nebular family, neither do they cross a local universe, a prime creative unit. Each superuniverse is simply a geographic space clustering of approximately \bibfrac{1}{7}\ts{th} of the organized and partially inhabited post\hyp{}Havona creation, and each is about equal in the number of local universes embraced and in the space encompassed. \bibemph{Nebadon,} your local universe, is one of the newer creations in \bibemph{Orvonton,} the seventh superuniverse.
+\vs p012 1:12 \bibemph{The Seven Superuniverses} are not primary physical organizations; nowhere do their boundaries divide a nebular family, neither do they cross a local universe, a prime creative unit. Each superuniverse is simply a geographic space clustering of approximately one seventh of the organized and partially inhabited post\hyp{}Havona creation, and each is about equal in the number of local universes embraced and in the space encompassed. \bibemph{Nebadon,} your local universe, is one of the newer creations in \bibemph{Orvonton,} the seventh superuniverse.
 \vs p012 1:13 \bibemph{The Grand Universe} is the present organized and inhabited creation. It consists of the seven superuniverses, with an aggregate evolutionary potential of around seven trillion inhabited planets, not to mention the eternal spheres of the central creation. But this tentative estimate takes no account of architectural administrative spheres, neither does it include the outlying groups of unorganized universes. The present ragged edge of the grand universe, its uneven and unfinished periphery, together with the tremendously unsettled condition of the whole astronomical plot, suggests to our star students that even the seven superuniverses are, as yet, uncompleted. As we move from within, from the divine centre outward in any one direction, we do, eventually, come to the outer limits of the organized and inhabited creation; we come to the outer limits of the grand universe. And it is near this outer border, in a far\hyp{}off corner of such a magnificent creation, that your local universe has its eventful existence.
 \vs p012 1:14 \bibemph{The Outer Space Levels.} Far out in space, at an enormous distance from the seven inhabited superuniverses, there are assembling vast and unbelievably stupendous circuits of force and materializing energies. Between the energy circuits of the seven superuniverses and this gigantic outer belt of force activity, there is a space zone of comparative quiet, which varies in width but averages about 400,000 light\hyp{}years. These space zones are free from star dust --- cosmic fog. Our students of these phenomena are in doubt as to the exact status of the space\hyp{}forces existing in this zone of relative quiet which encircles the seven superuniverses. But about 500,000 light\hyp{}years beyond the periphery of the present grand universe we observe the beginnings of a zone of an unbelievable energy action which increases in volume and intensity for over 25,000,000 light\hyp{}years. These tremendous wheels of energizing forces are situated in the first outer space level, a continuous belt of cosmic activity encircling the whole of the known, organized, and inhabited creation.
 \vs p012 1:15 Still greater activities are taking place beyond these regions, for the Uversa physicists have detected early evidence of force manifestations more than 50,000,000 light\hyp{}years beyond the outermost ranges of the phenomena in the first outer space level. These activities undoubtedly presage the organization of the material creations of the second outer space level of the master universe.
