--- a/tex/p013.tex
+++ b/tex/p013.tex
@@ -41,7 +41,7 @@
 \vs p013 2:3 \pc Ascendington is the only sacred sphere that will be unreservedly open to your inspection as a Paradise arrival. Vicegerington is the only sacred sphere that is wholly and unreservedly open to my scrutiny. Though its secrets are concerned in my origin, in this universe age I do not regard Vicegerington as my home. Trinity\hyp{}origin beings and trinitized beings are not the same.
 \vs p013 2:4 \pc The Trinity\hyp{}origin beings do not fully share the Father’s worlds; they have their sole homes on the Isle of Paradise in close proximity to the Most Holy Sphere. They often appear on Ascendington, the “bosom of the Father\hyp{}Son\hyp{}Spirit,” where they fraternize with their brethren who have come up from the lowly worlds of space.
 \vs p013 2:5 \pc You might assume that Creator Sons, being of Father\hyp{}Son origin, would regard Vicegerington as their home, but such is not the case in this universe age of the function of God the Sevenfold. And there are many similar problems that will perplex you, for you are sure to encounter many difficulties as you attempt to understand these things which are so near Paradise. Nor can you successfully reason out these questions; you know so little. And if you knew more about the Father’s worlds, you would simply encounter more difficulties until you knew \bibemph{all} about them. Status on any of these secret worlds is acquired by service as well as by nature of origin, and the successive universe ages may and do redistribute certain of these personality groupings.
-\vs p013 2:6 \pc The worlds of the inner circuit are really fraternal or status worlds more than actual residential spheres. Mortals will attain some status on each of the Father’s worlds save one. For example: When you mortals attain Havona, you are granted clearance for Ascendington, where you are most welcome, but you are not permitted to visit the other six sacred worlds. Subsequent to your passage through the Paradise regime and after your admission to the Corps of the Finality, you are granted clearance for Sonarington since you are sons of God as well as ascenders --- and you are even more. But there will always remain \bibfrac{1}{7}\ts{th} of Sonarington, the sector of the incarnation secrets of the divine Sons, which will not be open to your scrutiny. Never will those secrets be revealed to the ascendant sons of God.
+\vs p013 2:6 \pc The worlds of the inner circuit are really fraternal or status worlds more than actual residential spheres. Mortals will attain some status on each of the Father’s worlds save one. For example: When you mortals attain Havona, you are granted clearance for Ascendington, where you are most welcome, but you are not permitted to visit the other six sacred worlds. Subsequent to your passage through the Paradise regime and after your admission to the Corps of the Finality, you are granted clearance for Sonarington since you are sons of God as well as ascenders --- and you are even more. But there will always remain one seventh of Sonarington, the sector of the incarnation secrets of the divine Sons, which will not be open to your scrutiny. Never will those secrets be revealed to the ascendant sons of God.
 \vs p013 2:7 Eventually you will have full access to Ascendington and relative access to the other spheres of the Father except Divinington. But even when you are granted permission to land on five additional secret spheres, after you have become a finaliter, you will not be allowed to visit all sectors of such worlds. Nor will you be permitted to land on the shores of Divinington, the “bosom of the Father,” though you shall surely stand repeatedly at the “right hand of the Father.” Never throughout all eternity will there arise any necessity for your presence on the world of the Thought Adjusters.
 \vs p013 2:8 These rendezvous worlds of spirit life are forbidden ground to the extent that we are asked not to negotiate entrance to those phases of these spheres which are wholly outside our realms of experience. You may become creature perfect even as the Universal Father is deity perfect, but you may not know all the experiential secrets of all other orders of universe personalities. When the Creator has an experiential personality secret with his creature, the Creator preserves that secret in eternal confidence.
 \vs p013 2:9 \pc All these secrets are supposedly known to the collective body of the Trinitized Secrets of Supremacy. These beings are fully known only by their special world groups; they are little comprehended by other orders. After you attain Paradise, you will know and ardently love the ten Secrets of Supremacy who direct Ascendington. Excepting Divinington, you will also achieve a partial understanding of the Secrets of Supremacy on the other worlds of the Father, though not so perfectly as on Ascendington.
