--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -28,11 +28,11 @@
 \vs p015 2:1 Only the Universal Father knows the location and actual number of inhabited worlds in space; he calls them all by name and number. I can give only the approximate number of inhabited or inhabitable planets, for some local universes have more worlds suitable for intelligent life than others. Nor have all projected local universes been organized. Therefore the estimates which I offer are solely for the purpose of affording some idea of the immensity of the material creation.
 \vs p015 2:2 \pc There are seven superuniverses in the grand universe, and they are constituted approximately as follows:
 \vs p015 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{The System.} The basic unit of the supergovernment consists of about 1,000 inhabited or inhabitable worlds. Blazing suns, cold worlds, planets too near the hot suns, and other spheres not suitable for creature habitation are not included in this group. These 1,000 worlds adapted to support life are called a system, but in the younger systems only a comparatively small number of these worlds may be inhabited. Each inhabited planet is presided over by a Planetary Prince, and each local system has an architectural sphere as its headquarters and is ruled by a System Sovereign.
-\vs p015 2:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Constellation.} 100 systems (about $10^5$ inhabitable planets) make up a constellation. Each constellation has an architectural headquarters sphere and is presided over by three Vorondadek Sons, the Most Highs. Each constellation also has a Faithful of Days in observation, an ambassador of the Paradise Trinity.
-\vs p015 2:5 \ublistelem{3.}\bibnobreakspace \bibemph{The Local Universe.} 100 constellations (about $10^7$ inhabitable planets) constitute a local universe. Each local universe has a magnificent architectural headquarters world and is ruled by one of the co\hyp{}ordinate Creator Sons of God of the order of Michael. Each universe is blessed by the presence of a Union of Days, a representative of the Paradise Trinity.
-\vs p015 2:6 \ublistelem{4.}\bibnobreakspace \bibemph{The Minor Sector.} 100 local universes (about $10^9$ inhabitable planets) constitute a minor sector of the superuniverse government; it has a wonderful headquarters world, wherefrom its rulers, the Recents of Days, administer the affairs of the minor sector. There are three Recents of Days, Supreme Trinity Personalities, on each minor sector headquarters.
-\vs p015 2:7 \ublistelem{5.}\bibnobreakspace \bibemph{The Major Sector.} 100 minor sectors (about $10^{11}$ inhabitable worlds) make one major sector. Each major sector is provided with a superb headquarters and is presided over by three Perfections of Days, Supreme Trinity Personalities.
-\vs p015 2:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Superuniverse.} 10 major sectors (about $10^{12}$ inhabitable planets) constitute a superuniverse. Each superuniverse is provided with an enormous and glorious headquarters world and is ruled by three Ancients of Days.
+\vs p015 2:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Constellation.} 100 systems (about 100,000 inhabitable planets) make up a constellation. Each constellation has an architectural headquarters sphere and is presided over by three Vorondadek Sons, the Most Highs. Each constellation also has a Faithful of Days in observation, an ambassador of the Paradise Trinity.
+\vs p015 2:5 \ublistelem{3.}\bibnobreakspace \bibemph{The Local Universe.} 100 constellations (about\tunemarkup{pgnexus10}{\linebreak} 10,000,000 inhabitable planets) constitute a local universe. Each local universe has a magnificent architectural headquarters world and is ruled by one of the co\hyp{}ordinate Creator Sons of God of the order of Michael. Each universe is blessed by the presence of a Union of Days, a representative of the Paradise Trinity.
+\vs p015 2:6 \ublistelem{4.}\bibnobreakspace \bibemph{The Minor Sector.} 100 local universes (about\tunemarkup{pgnexus10}{\linebreak} 1,000,000,000 inhabitable planets) constitute a minor sector of the superuniverse government; it has a wonderful headquarters world, wherefrom its rulers, the Recents of Days, administer the affairs of the minor sector. There are three Recents of Days, Supreme Trinity Personalities, on each minor sector headquarters.
+\vs p015 2:7 \ublistelem{5.}\bibnobreakspace \bibemph{The Major Sector.} 100 minor sectors (about\tunemarkup{pgnexus10}{\linebreak} 100,000,000,000 inhabitable worlds) make one major sector. Each major sector is provided with a superb headquarters and is presided over by three Perfections of Days, Supreme Trinity Personalities.
+\vs p015 2:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Superuniverse.} 10 major sectors (about\tunemarkup{pgnexus10}{\linebreak} 1,000,000,000,000 inhabitable planets) constitute a superuniverse. Each superuniverse is provided with an enormous and glorious headquarters world and is ruled by three Ancients of Days.
 \vs p015 2:9 \ublistelem{7.}\bibnobreakspace \bibemph{The Grand Universe.} Seven superuniverses make up the present organized grand universe, consisting of approximately seven trillion inhabitable worlds plus the architectural spheres and the one billion inhabited spheres of Havona. The superuniverses are ruled and administered indirectly and reflectively from Paradise by the Seven Master Spirits. The billion worlds of Havona are directly administered by the Eternals of Days, one such Supreme Trinity Personality presiding over each of these perfect spheres.
 \vs p015 2:10 \pc Excluding the Paradise\hyp{}Havona spheres, the plan of universe organization provides for the following units:
 \vs p015 2:11 Superuniverses\bibdf7
@@ -45,13 +45,13 @@
 \vs p015 2:18 Each of the seven superuniverses is constituted, approximately, as follows:
 \vs p015 2:19 One system embraces, approximately\bibdf1,000 worlds
 \vs p015 2:20 One constellation (100 systems)\bibdf100,000 worlds
-\vs p015 2:21 One universe (100 constellations)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf10,000,000 worlds
+\vs p015 2:21 One universe (100 constellations)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf10,000,000 worlds
 \vs p015 2:22 One minor sector (100 universes)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000 worlds
 \vs p015 2:23 One major sector (100 minor sectors)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf100,000,000,000 worlds
 \vs p015 2:24 One superuniverse (10 major sectors)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000,000 worlds
 \vs p015 2:25 \pc All such estimates are approximations at best, for new systems are constantly evolving while other organizations are temporarily passing out of material existence.
 \usection{The Superuniverse of Orvonton}
-\vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about \bibfrac{1}{7}\ts{th} of the inhabited evolutionary universes.
+\vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about one seventh of the inhabited evolutionary universes.
 \vs p015 3:2 From the astronomical position of Urantia, as you look through the cross section of near\hyp{}by systems to the great Milky Way, you observe that the spheres of Orvonton are travelling in a vast elongated plane, the breadth being far greater than the thickness and the length far greater than the breadth.
 \vs p015 3:3 Observation of the so\hyp{}called Milky Way discloses the comparative increase in Orvonton stellar density when the heavens are viewed in one direction, while on either side the density diminishes; the number of stars and other spheres decreases away from the chief plane of our material superuniverse. When the angle of observation is propitious, gazing through the main body of this realm of maximum density, you are looking toward the residential universe and the centre of all things.
 \vs p015 3:4 \pc Of the ten major divisions of Orvonton, eight have been roughly identified by Urantian astronomers. The other two are difficult of separate recognition because you are obliged to view these phenomena from the inside. If you could look upon the superuniverse of Orvonton from a position far\hyp{}distant in space, you would immediately recognize the ten major sectors of the seventh galaxy.
@@ -72,7 +72,7 @@
 \vs p015 4:2 The Paradise force organizers transmute space potency into primordial force and evolve this prematerial potential into the primary and secondary energy manifestations of physical reality. When this energy attains gravity\hyp{}responding levels, the power directors and their associates of the superuniverse regime appear upon the scene and begin their never\hyp{}ending manipulations designed to establish the manifold power circuits and energy channels of the universes of time and space. Thus does physical matter appear in space, and so is the stage set for the inauguration of universe organization.
 \vs p015 4:3 This segmentation of energy is a phenomenon which has never been solved by the physicists of Nebadon. Their chief difficulty lies in the relative inaccessibility of the Paradise force organizers, for the living power directors, though they are competent to deal with space\hyp{}energy, do not have the least conception of the origin of the energies they so skillfully and intelligently manipulate.
 \vs p015 4:4 \pc Paradise force organizers are nebulae originators; they are able to initiate about their space presence the tremendous cyclones of force which, when once started, can never be stopped or limited until the all\hyp{}pervading forces are mobilized for the eventual appearance of the ultimatonic units of universe matter. Thus are brought into being the spiral and other nebulae, the mother wheels of the direct\hyp{}origin suns and their varied systems. In outer space there may be seen ten different forms of nebulae, phases of primary universe evolution, and these vast energy wheels had the same origin as did those in the seven superuniverses.
-\vs p015 4:5 \pc Nebulae vary greatly in size and in the resulting number and aggregate mass of their stellar and planetary offspring. A sun\hyp{}forming nebula just north of the borders of Orvonton, but within the superuniverse space level, has already given origin to approximately 40,000 suns, and the mother wheel is still throwing off suns, the majority of which are many times the size of yours. Some of the larger nebulae of outer space are giving origin to as many as $10^8$ suns.
+\vs p015 4:5 \pc Nebulae vary greatly in size and in the resulting number and aggregate mass of their stellar and planetary offspring. A sun\hyp{}forming nebula just north of the borders of Orvonton, but within the superuniverse space level, has already given origin to approximately 40,000 suns, and the mother wheel is still throwing off suns, the majority of which are many times the size of yours. Some of the larger nebulae of outer space are giving origin to as many as 100,000,000 suns.
 \vs p015 4:6 Nebulae are not directly related to any of the administrative units, such as minor sectors or local universes, although some local universes have been organized from the products of a single nebula. Each local universe embraces exactly\fnst{In \bibref[32:1.4]{p032 1:4} we are told this is \bibemph{approximately} so, not \bibemph{exactly}. The only apparent difference is that there it refers to the \bibemph{force endowment}, whereas here to the \bibemph{energy charge} of a superuniverse.} 1/100,000\ts{th} of the total energy charge of a superuniverse irrespective of nebular relationship, for energy is not organized by nebulae --- it is universally distributed.
 \vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost million years\fnst{The modern (2003) estimate of the distance to the Andromeda galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. The estimate given in the text corresponds to one given in the book ``Stars and Atoms'' by Sir Arthur Eddington, which was published in 1927. Edwin Hubble was the first to identify the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
 \vs p015 4:8 The Milky Way galaxy is composed of vast numbers of former spiral and other nebulae, and many still retain their original configuration. But as the result of internal catastrophes and external attraction, many have suffered such distortion and rearrangement as to cause these enormous aggregations to appear as gigantic luminous masses of blazing suns, like the Magellanic Cloud. The globular type of star clusters predominates near the outer margins of Orvonton.
@@ -186,10 +186,10 @@
 \vs p015 12:3 In all matters not requiring trial, the submission of evidence, the Ancients of Days or their associates render decisions, and these rulings are always unanimous. We are here dealing with the councils of perfection. There are no disagreements nor minority opinions in the decrees of these supreme and superlative tribunals.
 \vs p015 12:4 With certain few exceptions the supergovernments exercise jurisdiction over all things and all beings in their respective domains. There is no appeal from the rulings and decisions of the superuniverse authorities since they represent the concurred opinions of the Ancients of Days and that Master Spirit who, from Paradise, presides over the destiny of the superuniverse concerned.
 \usection{The Sector Governments}
-\vs p015 13:1 A \bibemph{major sector} comprises about \bibfrac{1}{10}\ts{th} of a superuniverse and consists of 100 minor sectors, $10^4$ local universes, about $10^{11}$ inhabitable worlds. These major sectors are administered by three Perfections of Days, Supreme Trinity Personalities.
+\vs p015 13:1 A \bibemph{major sector} comprises about one tenth of a superuniverse and consists of 100 minor sectors, 10,000 local universes, about\tunemarkup{pgauraone}{\linebreak} 100,000,000,000 inhabitable worlds. These major sectors are administered by three Perfections of Days, Supreme Trinity Personalities.
 \vs p015 13:2 The courts of the Perfections of Days are constituted much as are those of the Ancients of Days except that they do not sit in spiritual judgment upon the realms. The work of these major sector governments has chiefly to do with the intellectual status of a far\hyp{}flung creation. The major sectors detain, adjudicate, dispense, and tabulate, for reporting to the courts of the Ancients of Days, all matters of superuniverse importance of a routine and administrative nature which are not immediately concerned with the spiritual administration of the realms or with the outworking of the mortal\hyp{}ascension plans of the Paradise Rulers. The personnel of a major sector government is no different from that of the superuniverse.
 \vs p015 13:3 As the magnificent satellites of Uversa are concerned with your final spiritual preparation for Havona, so are the 70 satellites of Umajor the fifth devoted to your superuniverse intellectual training and development. From all Orvonton, here are gathered together the wise beings who labour untiringly to prepare the mortals of time for their further progress towards the career of eternity. Most of this training of ascending mortals is conducted on the 70 study worlds.
-\vs p015 13:4 \pc The \bibemph{minor sector} governments are presided over by three Recents of Days. Their administration is concerned mainly with the physical control, unification, stabilization, and routine co\hyp{}ordination of the administration of the component local universes. Each minor sector embraces as many as 100 local universes, $10^4$ constellations, $10^6$ systems, or about $10^9$ inhabitable worlds.
+\vs p015 13:4 \pc The \bibemph{minor sector} governments are presided over by three Recents of Days. Their administration is concerned mainly with the physical control, unification, stabilization, and routine co\hyp{}ordination of the administration of the component local universes. Each minor sector embraces as many as 100 local universes, 10,000 constellations, 1,000,000 systems, or about 1,000,000,000 inhabitable worlds.
 \vs p015 13:5 Minor sector headquarters worlds are the grand rendezvous of the Master Physical Controllers. These headquarters worlds are surrounded by the seven instruction spheres which constitute the entrance schools of the superuniverse and are the centres of training for physical and administrative knowledge concerning the universe of universes.
 \vs p015 13:6 The administrators of the minor sector governments are under the immediate jurisdiction of the major sector rulers. The Recents of Days receive all reports of observations and co\hyp{}ordinate all recommendations which come up to a superuniverse from the Unions of Days who are stationed as Trinity observers and advisers on the headquarters spheres of the local universes and from the Faithfuls of Days who are similarly attached to the councils of the Most Highs at the headquarters of the constellations. All such reports are transmitted to the Perfections of Days on the major sectors, subsequently to be passed on to the courts of the Ancients of Days. Thus the Trinity regime extends from the constellations of the local universes up to the headquarters of the superuniverse. The local system headquarters do not have Trinity representatives.
 \usection{Purposes of the Seven Superuniverses}
