--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -72,7 +72,7 @@
 \vs p020 6:9 Upon the completion of a Creator Son’s final bestowal the Spirit of Truth previously sent into all Avonal\hyp{}bestowal worlds of that local universe changes in nature, becoming more literally the spirit of the sovereign Michael. This phenomenon takes place concurrently with the liberation of the Spirit of Truth for service on the Michael\hyp{}mortal\hyp{}bestowal planet. Thereafter, each world honoured by a Magisterial bestowal will receive the same spirit Comforter from the sevenfold Creator Son, in association with that Magisterial Son, which it would have received had the local universe Sovereign personally incarnated as its bestowal Son.
 \usection{The Trinity Teacher Sons}
 \vs p020 7:1 These highly personal and highly spiritual Paradise Sons are brought into being by the Paradise Trinity. They are known in Havona as the order of Daynals. In Orvonton they are of record as Trinity Teacher Sons, so named because of their parentage. On Salvington they are sometimes denominated the Paradise Spiritual Sons.
-\vs p020 7:2 In numbers the Teacher Sons are constantly increasing. The last universal census broadcast gave the number of these Trinity Sons functioning in the central and superuniverses as a little more than 21,000,000,000, and this is exclusive of the Paradise reserves, which include more than \bibfrac{1}{3}\ts{rd} of all Trinity Teacher Sons in existence.
+\vs p020 7:2 In numbers the Teacher Sons are constantly increasing. The last universal census broadcast gave the number of these Trinity Sons functioning in the central and superuniverses as a little more than 21,000,000,000, and this is exclusive of the Paradise reserves, which include more than one third of all Trinity Teacher Sons in existence.
 \vs p020 7:3 The Daynal order of sonship is not an organic part of the local or superuniverse administrations. Its members are neither creators nor retrievers, neither judges nor rulers. They are not so much concerned with universe administration as with moral enlightenment and spiritual development. They are the universal educators, being dedicated to the spiritual awakening and moral guidance of all realms. Their ministry is intimately interrelated with that of the personalities of the Infinite Spirit and is closely associated with the Paradise ascension of creature beings.
 \vs p020 7:4 These Sons of the Trinity partake of the combined natures of the three Paradise Deities, but in Havona they seem more to reflect the nature of the Universal Father. In the superuniverses they seem to portray the nature of the Eternal Son, while in the local creations they appear to show forth the character of the Infinite Spirit. In all universes they are the embodiment of service and the discretion of wisdom.
 \vs p020 7:5 Unlike their Paradise brethren, Michaels and Avonals, Trinity Teacher Sons receive no preliminary training in the central universe. They are dispatched directly to the headquarters of the superuniverses and from there are commissioned for service in some local universe. In their ministry to these evolutionary realms they utilize the combined spiritual influence of a Creator Son and the associated Magisterial Sons, for the Daynals do not possess a spiritual drawing power in and of themselves.
