--- a/tex/p024.tex
+++ b/tex/p024.tex
@@ -73,7 +73,7 @@
 \usection{Origin of the Graduate Guides}
 \vs p024 7:1 Though evolution is not the order of the central universe, we believe that the Graduate Guides are the perfected or more experienced members of another order of central universe creatures, the Havona Servitals. Graduate Guides show such a breadth of sympathy and such a capacity for understanding the ascendant creatures that we are convinced they have gained this culture by actual service in the superuniverse realms as the Havona Servitals of universal ministry. If this view is not correct, how then can we account for the continuous disappearance of the senior or more experienced servitals?
 \vs p024 7:2 A servital will be long absent from Havona on superuniverse assignment, having been on many such missions previously, will return home, be granted the privilege of “personal contact” with the Paradise Central Shining, will be embraced by the Luminous Persons, and disappear from the recognition of his spirit fellows, never more to reappear among those of his kind.
-\vs p024 7:3 On returning from superuniverse service, a Havona Servital may enjoy numerous divine embraces and emerge therefrom merely an exalted servital. Experiencing the luminous embrace does not necessarily signify that the servital must translate into a Graduate Guide, but almost \bibfrac{1}{4}\ts{er} of those who achieve the divine embrace never return to the service of the realms.
+\vs p024 7:3 On returning from superuniverse service, a Havona Servital may enjoy numerous divine embraces and emerge therefrom merely an exalted servital. Experiencing the luminous embrace does not necessarily signify that the servital must translate into a Graduate Guide, but almost one quarter of those who achieve the divine embrace never return to the service of the realms.
 \vs p024 7:4 \pc There appears on the high records a succession of such entries as this:
 \vs p024 7:5 “And servital number\tunemarkup{pgafour}{\linebreak} 842,842,682,846,782 of Havona,\tunemarkup{pgnexus10}{\linebreak} named Sudna, came over from the superuniverse service, was received on Paradise, knew the Father, entered the divine embrace, and is not.”
 \vs p024 7:6 When such an entry appears on the records, the career of such a servital is closed. But in just three moments (a little less than three days of your time) a newborn Graduate Guide “spontaneously” appears on the outer circuit of the Havona universe. And the number of Graduate Guides, allowing for a slight difference, due no doubt to those in transition, exactly equals the number of vanished servitals.
