--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -76,7 +76,7 @@
 \vs p039 4:3 These same seraphic administrators are also attached to the governments of the world rulers, the Planetary Princes. The majority of planets in a given universe are under the jurisdiction of a secondary Lanonandek Son, but on certain worlds, such as Urantia, there has been a miscarriage of the divine plan. In the event of the defection of a Planetary Prince, these seraphim become attached to the Melchizedek receivers and their successors in planetary authority. The present acting ruler of Urantia is assisted by a corps of 1,000 of this versatile order of seraphim.
 \vs p039 4:4 \ublistelem{2.}\bibnobreakspace \bibemph{Justice Guides.} These are the angels who present the summary of evidence concerning the eternal welfare of men and angels when such matters come up for adjudication in the tribunals of a system or a planet. They prepare the statements for all preliminary hearings involving mortal survival, statements which are subsequently carried with the records of such cases to the higher tribunals of the universe and the superuniverse. The defence of all cases of doubtful survival is prepared by these seraphim, who have a perfect understanding of all the details of every feature of every count in the indictments drawn by the administrators of universe justice.
 \vs p039 4:5 It is not the mission of these angels to defeat or to delay justice but rather to ensure that unerring justice is dealt out with generous mercy in fairness to all creatures. These seraphim often function on the local worlds, commonly appearing before the referee trios of the conciliating commissions --- the courts for minor misunderstandings. Many who at one time served as justice guides in the lower realms later appear as Voices of Mercy in the higher spheres and on Salvington.
-\vs p039 4:6 In the Lucifer rebellion in Satania very few of the justice guides were lost, but more than \bibfrac{1}{4}\ts{er} of the other administrator seraphim and of the lower orders of seraphic ministers were misled and deluded by the sophistries of unbridled personal liberty.
+\vs p039 4:6 In the Lucifer rebellion in Satania very few of the justice guides were lost, but more than one quarter of the other administrator seraphim and of the lower orders of seraphic ministers were misled and deluded by the sophistries of unbridled personal liberty.
 \vs p039 4:7 \ublistelem{3.}\bibnobreakspace \bibemph{Interpreters of Cosmic Citizenship.} When ascending mortals have completed the mansion world training, the first student apprenticeship in the universe career, they are permitted to enjoy the transient satisfactions of relative maturity --- citizenship on the system capital. While the attainment of each ascendant goal is a factual achievement, in the larger sense such goals are simply milestones on the long ascending path to Paradise. But however relative such successes may be, no evolutionary creature is ever denied the full though transient satisfaction of goal attainment. Ever and anon there is a pause in the Paradise ascent, a short breathing spell, during which universe horizons stand still, creature status is stationary, and the personality tastes the sweetness of goal fulfilment.
 \vs p039 4:8 The first of such periods in the career of a mortal ascender occurs on the capital of a local system. During this pause you will, as a citizen of Jerusem, attempt to express in creature life those things which you have acquired during the eight preceding life experiences --- embracing Urantia and the 7 mansion worlds.
 \vs p039 4:9 The seraphic interpreters of cosmic citizenship guide the new citizens of the system capitals and quicken their appreciation of the responsibilities of universe government. These seraphim are also closely associated with the Material Sons in the system administration, while they portray the responsibility and morality of cosmic citizenship to the material mortals on the inhabited worlds.
@@ -86,7 +86,7 @@
 \vs p039 4:13 To the inhabited worlds the quickeners of morality portray mortal life as an unbroken chain of many links. Your short sojourn on Urantia, on this sphere of mortal infancy, is only a single link, the very first in the long chain that is to stretch across universes and through the eternal ages. It is not so much what you learn in this first life; it is the experience of living this life that is important. Even the \bibemph{work} of this world, paramount though it is, is not nearly so important as the \bibemph{way} in which you do this work. There is no material reward for righteous living, but there is profound satisfaction --- consciousness of achievement --- and this transcends any conceivable material reward.
 \vs p039 4:14 The keys of the kingdom of heaven are: sincerity, more sincerity, and more sincerity. All men have these keys. Men use them --- advance in spirit status --- by decisions, by more decisions, and by more decisions. The highest moral choice is the choice of the highest possible value, and always --- in any sphere, in all of them --- this is to choose to do the will of God. If man thus chooses, he \bibemph{is} great, though he be the humblest citizen of Jerusem or even the least of mortals on Urantia.
 \vs p039 4:15 \ublistelem{5.}\bibnobreakspace \bibemph{The Transporters.} These are the transport seraphim who function in the local systems. In Satania, your system, they carry passengers back and forth from Jerusem and otherwise serve as interplanetary transporters. Seldom does a day pass in which a transport seraphim of Satania does not deposit some student visitor or some other traveller of spirit or semispirit nature on the shores of Urantia. These very space traversers will sometime carry you to and from the various worlds of the system headquarters group, and when you have finished the Jerusem assignment, they will carry you forward to Edentia. But under no circumstances will they carry you backward to the world of human origin. A mortal never returns to his native planet during the dispensation of his temporal existence, and if he should return during a subsequent dispensation, he would be escorted by a transport seraphim of the universe headquarters group.
-\vs p039 4:16 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These seraphim are the keepers of the threefold records of the local systems. The temple of records on a system capital is a unique structure, \bibfrac{1}{3}\ts{rd} material, constructed of luminous metals and crystals; \bibfrac{1}{3}\ts{rd} morontial, fabricated of the liaison of spiritual and material energy but beyond the range of mortal vision; and \bibfrac{1}{3}\ts{rd} spiritual. The recorders of this order preside over and maintain this threefold system of records. Ascending mortals will at first consult the material archives, Material Sons and the higher transition beings consult those of the morontia halls, while seraphim and the higher spirit personalities of the realm peruse the records of the spirit section.
+\vs p039 4:16 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These seraphim are the keepers of the threefold records of the local systems. The temple of records on a system capital is a unique structure, one third material, constructed of luminous metals and crystals; one third morontial, fabricated of the liaison of spiritual and material energy but beyond the range of mortal vision; and one third spiritual. The recorders of this order preside over and maintain this threefold system of records. Ascending mortals will at first consult the material archives, Material Sons and the higher transition beings consult those of the morontia halls, while seraphim and the higher spirit personalities of the realm peruse the records of the spirit section.
 \vs p039 4:17 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} The reserve corps of administrator seraphim on Jerusem spend much of their waiting time in visiting, as spirit companions, with the newly arrived ascending mortals from the various worlds of the system --- the accredited graduates of the mansion worlds. One of the delights of your sojourn on Jerusem will be to talk and visit, during recess periods, with these much\hyp{}travelled and many\hyp{}experienced seraphim of the waiting reserve corps.
 \vs p039 4:18 It is just such friendly relationships as these that so endear a system capital to the ascending mortals. On Jerusem you will find the first intermingling of Material Sons, angels, and ascending pilgrims. Here fraternize beings who are wholly spiritual and semispiritual and individuals just emerging from material existence. Mortal forms are there so modified and human ranges of light reaction so extended that all are able to enjoy mutual recognition and sympathetic personality understanding.
 \usection{Planetary Helpers}
