--- a/tex/p075.tex
+++ b/tex/p075.tex
@@ -54,8 +54,8 @@
 \usection{Adam and Eve Leave the Garden}
 \vs p075 6:1 When Adam learned that the Nodites were on the march, he sought the counsel of the Melchizedeks, but they refused to advise him, only telling him to do as he thought best and promising their friendly co\hyp{}operation, as far as possible, in any course he might decide upon. The Melchizedeks had been forbidden to interfere with the personal plans of Adam and Eve.
 \vs p075 6:2 Adam knew that he and Eve had failed; the presence of the Melchizedek receivers told him that, though he still knew nothing of their personal status or future fate. He held an all\hyp{}night conference with some 1,200 loyal followers who pledged themselves to follow their leader, and the next day at noon these pilgrims went forth from Eden in quest of new homes. Adam had no liking for war and accordingly elected to leave the first garden to the Nodites unopposed.
-\vs p075 6:3 The Edenic caravan was halted on the third day out from the Garden by the arrival of the seraphic transports from Jerusem. And for the first time Adam and Eve were informed of what was to become of their children. While the transports stood by, those children who had arrived at the age of choice (20 years) were given the option of remaining on Urantia with their parents or of becoming wards of the Most Highs of Norlatiadek. \bibfrac{2}{3}\ts{rds} chose to go to Edentia; about \bibfrac{1}{3}\ts{rd} elected to remain with their parents. All children of prechoice age were taken to Edentia. No one could have beheld the sorrowful parting of this Material Son and Daughter and their children without realizing that the way of the transgressor is hard. These offspring of Adam and Eve are now on Edentia; we do not know what disposition is to be made of them.
-\vs p075 6:4 It was a sad, sad caravan that prepared to journey on. Could anything have been more tragic! To have come to a world in such high hopes, to have been so auspiciously received, and then to go forth in disgrace from Eden, only to lose more than \bibfrac{3}{4}\ts{ths} of their children even before finding a new abiding place!
+\vs p075 6:3 The Edenic caravan was halted on the third day out from the Garden by the arrival of the seraphic transports from Jerusem. And for the first time Adam and Eve were informed of what was to become of their children. While the transports stood by, those children who had arrived at the age of choice (20 years) were given the option of remaining on Urantia with their parents or of becoming wards of the Most Highs of Norlatiadek. Two thirds chose to go to Edentia; about one third elected to remain with their parents. All children of prechoice age were taken to Edentia. No one could have beheld the sorrowful parting of this Material Son and Daughter and their children without realizing that the way of the transgressor is hard. These offspring of Adam and Eve are now on Edentia; we do not know what disposition is to be made of them.
+\vs p075 6:4 It was a sad, sad caravan that prepared to journey on. Could anything have been more tragic! To have come to a world in such high hopes, to have been so auspiciously received, and then to go forth in disgrace from Eden, only to lose more than three fourths of their children even before finding a new abiding place!
 \usection{Degradation of Adam and Eve}
 \vs p075 7:1 It was while the Edenic caravan was halted that Adam and Eve were informed of the nature of their transgressions and advised concerning their fate. Gabriel appeared to pronounce judgment. And this was the verdict: The Planetary Adam and Eve of Urantia are adjudged in default; they have violated the covenant of their trusteeship as the rulers of this inhabited world.
 \vs p075 7:2 While downcast by the sense of guilt, Adam and Eve were greatly cheered by the announcement that their judges on Salvington had absolved them from all charges of standing in “contempt of the universe government.” They had not been held guilty of rebellion.
