--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -42,7 +42,7 @@
 \vs p078 3:9 \pc These racial distributions, associated with extensive climatic changes, set the world stage for the inauguration of the Andite era of Urantia civilization. These early migrations extended over a period of 10,000 years, from 25,000 to 15,000\,B.C. The later or Andite migrations extended from about 15,000 to 6000\,B.C.
 \vs p078 3:10 It took so long for the earlier waves of Adamites to pass over Eurasia that their culture was largely lost in transit. Only the later Andites moved with sufficient speed to retain the Edenic culture at any great distance from Mesopotamia.
 \usection{The Andites}
-\vs p078 4:1 The Andite races were the primary blends of the pure\hyp{}line violet race and the Nodites plus the evolutionary peoples. In general, Andites should be thought of as having a far greater percentage of Adamic blood than the modern races. In the main, the term Andite is used to designate those peoples whose racial inheritance was from \bibfrac{1}{8}\ts{th} to \bibfrac{1}{6}\ts{th} violet. Modern Urantians, even the northern white races, contain much less than this percentage of the blood of Adam.
+\vs p078 4:1 The Andite races were the primary blends of the pure\hyp{}line violet race and the Nodites plus the evolutionary peoples. In general, Andites should be thought of as having a far greater percentage of Adamic blood than the modern races. In the main, the term Andite is used to designate those peoples whose racial inheritance was from one\hyp{}eighth to one\hyp{}sixth violet. Modern Urantians, even the northern white races, contain much less than this percentage of the blood of Adam.
 \vs p078 4:2 The earliest Andite peoples took origin in the regions adjacent to Mesopotamia more than 25,000 years ago and consisted of a blend of the Adamites and Nodites. The second garden was surrounded by concentric circles of diminishing violet blood, and it was on the periphery of this racial melting pot that the Andite race was born. Later on, when the migrating Adamites and Nodites entered the then fertile regions of Turkestan, they soon blended with the superior inhabitants, and the resultant race mixture extended the Andite type northward.
 \vs p078 4:3 The Andites were the best all\hyp{}round human stock to appear on Urantia since the days of the pure\hyp{}line violet peoples. They embraced most of the highest types of the surviving remnants of the Adamite and Nodite races and, later, some of the best strains of the yellow, blue, and green men.
 \vs p078 4:4 \pc These early Andites were not Aryan; they were pre\hyp{}Aryan. They were not white; they were pre\hyp{}white. They were neither an Occidental nor an Oriental people. But it is Andite inheritance that gives to the polyglot mixture of the so\hyp{}called white races that generalized homogeneity which has been called Caucasoid.
@@ -52,7 +52,7 @@
 \vs p078 5:1 For 20,000 years the culture of the second garden persisted, but it experienced a steady decline until about 15,000\,B.C., when the regeneration of the Sethite priesthood and the leadership of Amosad inaugurated a brilliant era. The massive waves of civilization which later spread over Eurasia immediately followed the great renaissance of the Garden consequent upon the extensive union of the Adamites with the surrounding mixed Nodites to form the Andites.
 \vs p078 5:2 These Andites inaugurated new advances throughout Eurasia and North Africa. From Mesopotamia through Sinkiang the Andite culture was dominant, and the steady migration toward Europe was continuously offset by new arrivals from Mesopotamia. But it is hardly correct to speak of the Andites as a race in Mesopotamia proper until near the beginning of the terminal migrations of the mixed descendants of Adam. By this time even the races in the second garden had become so blended that they could no longer be considered Adamites.
 \vs p078 5:3 The civilization of Turkestan was constantly being revived and refreshed by the newcomers from Mesopotamia, especially by the later Andite cavalrymen. The so\hyp{}called Aryan mother tongue was in process of formation in the highlands of Turkestan; it was a blend of the Andonic dialect of that region with the language of the Adamsonites and later Andites. Many modern languages are derived from this early speech of these central Asian tribes who conquered Europe, India, and the upper stretches of the Mesopotamian plains. This ancient language gave the Occidental tongues all of that similarity which is called Aryan.
-\vs p078 5:4 \pc By 12,000\,B.C. \bibfrac{3}{4}\ts{ers} of the Andite stock of the world was resident in northern and eastern Europe, and when the later and final exodus from Mesopotamia took place, 65\% of these last waves of emigration entered Europe.
+\vs p078 5:4 \pc By 12,000\,B.C. three quarters of the Andite stock of the world was resident in northern and eastern Europe, and when the later and final exodus from Mesopotamia took place, 65\% of these last waves of emigration entered Europe.
 \vs p078 5:5 \pc The Andites not only migrated to Europe but to northern China and India, while many groups penetrated to the ends of the earth as missionaries, teachers, and traders. They contributed considerably to the northern groups of the Saharan Sangik peoples. But only a few teachers and traders ever penetrated farther south in Africa than the headwaters of the Nile. Later on, mixed Andites and Egyptians followed down both the east and west coasts of Africa well below the equator, but they did not reach Madagascar.
 \vs p078 5:6 These Andites were the so\hyp{}called Dravidian and later Aryan conquerors of India; and their presence in central Asia greatly upstepped the ancestors of the Turanians. Many of this race journeyed to China by way of both Sinkiang and Tibet and added desirable qualities to the later Chinese stocks. From time to time small groups made their way into Japan, Formosa, the East Indies, and southern China, though very few entered southern China by the coastal route.
 \vs p078 5:7 132 of this race, embarking in a fleet of small boats from Japan, eventually reached South America and by intermarriage with the natives of the Andes established the ancestry of the later rulers of the Incas. They crossed the Pacific by easy stages, tarrying on the many islands they found along the way. The islands of the Polynesian group were both more numerous and larger then than now, and these Andite sailors, together with some who followed them, biologically modified the native groups in transit. Many flourishing centres of civilization grew up on these now submerged lands as a result of Andite penetration. Easter Island was long a religious and administrative centre of one of these lost groups. But of the Andites who navigated the Pacific of long ago none but the 132 ever reached the mainland of the Americas.
