--- a/tex/p095.tex
+++ b/tex/p095.tex
@@ -53,7 +53,7 @@
 \vs p095 5:7 Ikhnaton was wise enough to maintain the outward worship of Aton, the sun\hyp{}god, while he led his associates in the disguised worship of the One God, creator of Aton and supreme Father of all. This young teacher\hyp{}king was a prolific writer, being author of the exposition entitled “The One God,” a book of 31 chapters, which the priests, when returned to power, utterly destroyed. Ikhnaton also wrote 137 hymns, 12 of which are now preserved in the Old Testament Book of Psalms, credited to Hebrew authorship.
 \vs p095 5:8 \pc The supreme word of Ikhnaton’s religion in daily life was “righteousness,” and he rapidly expanded the concept of right doing to embrace international as well as national ethics. This was a generation of amazing personal piety and was characterized by a genuine aspiration among the more intelligent men and women to find God and to know him. In those days social position or wealth gave no Egyptian any advantage in the eyes of the law. The family life of Egypt did much to preserve and augment moral culture and was the inspiration of the later superb family life of the Jews in Palestine.
 \vs p095 5:9 The fatal weakness of Ikhnaton’s gospel was its greatest truth, the teaching that Aton was not only the creator of Egypt but also of the “whole world, man and beasts, and all the foreign lands, even Syria and Kush, besides this land of Egypt. He sets all in their place and provides all with their needs.” These concepts of Deity were high and exalted, but they were not nationalistic. Such sentiments of internationality in religion failed to augment the morale of the Egyptian army on the battlefield, while they provided effective weapons for the priests to use against the young king and his new religion. He had a Deity concept far above that of the later Hebrews, but it was too advanced to serve the purposes of a nation builder.
-\vs p095 5:10 \pc Though the monotheistic ideal suffered with the passing of Ikhnaton, the idea of one God persisted in the minds of many groups. The son\hyp{}in\hyp{}law of Ikhnaton went along with the priests, back to the worship of the old gods, changing his name to Tutankhamen. The capital returned to Thebes, and the priests waxed fat upon the land, eventually gaining possession of \bibfrac{1}{7}\ts{th} of all Egypt; and presently one of this same order of priests made bold to seize the crown.
+\vs p095 5:10 \pc Though the monotheistic ideal suffered with the passing of Ikhnaton, the idea of one God persisted in the minds of many groups. The son\hyp{}in\hyp{}law of Ikhnaton went along with the priests, back to the worship of the old gods, changing his name to Tutankhamen. The capital returned to Thebes, and the priests waxed fat upon the land, eventually gaining possession of one seventh of all Egypt; and presently one of this same order of priests made bold to seize the crown.
 \vs p095 5:11 But the priests could not fully overcome the monotheistic wave. Increasingly they were compelled to combine and hyphenate their gods; more and more the family of gods contracted. Ikhnaton had associated the flaming disc of the heavens with the creator God, and this idea continued to flame up in the hearts of men, even of the priests, long after the young reformer had passed on. Never did the concept of monotheism die out of the hearts of men in Egypt and in the world. It persisted even to the arrival of the Creator Son of that same divine Father, the one God whom Ikhnaton had so zealously proclaimed for the worship of all Egypt.
 \vs p095 5:12 The weakness of Ikhnaton’s doctrine lay in the fact that he proposed such an advanced religion that only the educated Egyptians could fully comprehend his teachings. The rank and file of the agricultural labourers never really grasped his gospel and were, therefore, ready to return with the priests to the old\hyp{}time worship of Isis and her consort Osiris, who was supposed to have been miraculously resurrected from a cruel death at the hands of Set, the god of darkness and evil.
 \vs p095 5:13 The teaching of immortality for all men was too advanced for the Egyptians. Only kings and the rich were promised a resurrection; therefore did they so carefully embalm and preserve their bodies in tombs against the day of judgment. But the democracy of salvation and resurrection as taught by Ikhnaton eventually prevailed, even to the extent that the Egyptians later believed in the survival of dumb animals.
