--- a/tex/p187.tex
+++ b/tex/p187.tex
@@ -43,7 +43,7 @@
 \vs p187 4:1 One of the brigands railed at Jesus, saying, “If you are the Son of God, why do you not save yourself and us?” But when he had reproached Jesus, the other thief, who had many times heard the Master teach, said: “Do you have no fear even of God? Do you not see that we are suffering justly for our deeds, but that this man suffers unjustly? Better that we should seek forgiveness for our sins and salvation for our souls.” When Jesus heard the thief say this, he turned his face toward him and smiled approvingly. When the malefactor saw the face of Jesus turned toward him, he mustered up his courage, fanned the flickering flame of his faith, and said, “Lord, remember me when you come into your kingdom.” And then Jesus said, \textcolour{ubdarkred}{“Verily, verily, I say to you today, you shall sometime be with me in Paradise.”}
 \vs p187 4:2 The Master had time amidst the pangs of mortal death to listen to the faith confession of the believing brigand. When this thief reached out for salvation, he found deliverance. Many times before this he had been constrained to believe in Jesus, but only in these last hours of consciousness did he turn with a whole heart toward the Master’s teaching. When he saw the manner in which Jesus faced death upon the cross, this thief could no longer resist the conviction that this Son of Man was indeed the Son of God.
 \vs p187 4:3 \pc During this episode of the conversion and reception of the thief into the kingdom by Jesus, the Apostle John was absent, having gone into the city to bring his mother and her friends to the scene of the crucifixion. Luke subsequently heard this story from the converted Roman captain of the guard.
-\vs p187 4:4 The Apostle John told about the crucifixion as he remembered the event \bibfrac{2}{3}\ts{rds} of a century after its occurrence. The other records were based upon the recital of the Roman centurion on duty who, because of what he saw and heard, subsequently believed in Jesus and entered into the full fellowship of the kingdom of heaven on earth.
+\vs p187 4:4 The Apostle John told about the crucifixion as he remembered the event two thirds of a century after its occurrence. The other records were based upon the recital of the Roman centurion on duty who, because of what he saw and heard, subsequently believed in Jesus and entered into the full fellowship of the kingdom of heaven on earth.
 \vs p187 4:5 \pc This young man, the penitent brigand, had been led into a life of violence and wrongdoing by those who extolled such a career of robbery as an effective patriotic protest against political oppression and social injustice. And this sort of teaching, plus the urge for adventure, led many otherwise well\hyp{}meaning youths to enlist in these daring expeditions of robbery. This young man had looked upon Barabbas as a hero. Now he saw that he had been mistaken. Here on the cross beside him he saw a really great man, a true hero. Here was a hero who fired his zeal and inspired his highest ideas of moral self\hyp{}respect and quickened all his ideals of courage, manhood, and bravery. In beholding Jesus, there sprang up in his heart an overwhelming sense of love, loyalty, and genuine greatness.
 \vs p187 4:6 And if any other person among the jeering crowd had experienced the birth of faith within his soul and had appealed to the mercy of Jesus, he would have been received with the same loving consideration that was displayed toward the believing brigand.
 \vs p187 4:7 \pc Just after the repentant thief heard the Master’s promise that they should sometime meet in Paradise, John returned from the city, bringing with him his mother and a company of almost a dozen women believers. John took up his position near Mary the mother of Jesus, supporting her. Her son Jude stood on the other side. As Jesus looked down upon this scene, it was noontide, and he said to his mother, \textcolour{ubdarkred}{“Woman, behold your son!”} And speaking to John, he said, \textcolour{ubdarkred}{“My son, behold your mother!”} And then he addressed them both, saying, \textcolour{ubdarkred}{“I desire that you depart from this place.”} And so John and Jude led Mary away from Golgotha. John took the mother of Jesus to the place where he tarried in Jerusalem and then hastened back to the scene of the crucifixion. After the Passover Mary returned to Bethsaida, where she lived at John’s home for the rest of her natural life. Mary did not live quite one year after the death of Jesus.
