--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -33,12 +33,12 @@
 \vs p072 2:9 \pc This nation is adjudicated by two major court systems --- the law courts and the socio\hyp{}economic courts. The law courts function on the following three levels:
 \vs p072 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{Minor courts} of municipal and local jurisdiction, whose decisions may be appealed to the high state tribunals.
 \vs p072 2:11 \ublistelem{2.}\bibnobreakspace \bibemph{State supreme courts,} whose decisions are final in all matters not involving the federal government or jeopardy of citizenship rights and liberties. The regional executives are empowered to bring any case at once to the bar of the federal supreme court.
-\vs p072 2:12 \ublistelem{3.}\bibnobreakspace \bibemph{Federal supreme court ---} the high tribunal for the adjudication of national contentions and the appellate cases coming up from the state courts. This supreme tribunal consists of 12 men over 40 and under 75 years of age who have served 2 or more years on some state tribunal, and who have been appointed to this high position by the chief executive with the majority approval of the supercabinet and the third house of the legislative assembly. All decisions of this supreme judicial body are by at least a \bibfrac{2}{3}\ts{rds} vote.
+\vs p072 2:12 \ublistelem{3.}\bibnobreakspace \bibemph{Federal supreme court ---} the high tribunal for the adjudication of national contentions and the appellate cases coming up from the state courts. This supreme tribunal consists of 12 men over 40 and under 75 years of age who have served 2 or more years on some state tribunal, and who have been appointed to this high position by the chief executive with the majority approval of the supercabinet and the third house of the legislative assembly. All decisions of this supreme judicial body are by at least a two\hyp{}thirds vote.
 \vs p072 2:13 \pc The socio\hyp{}economic courts function in the following three divisions:
 \vs p072 2:14 \ublistelem{1.}\bibnobreakspace \bibemph{Parental courts,} associated with the legislative and executive divisions of the home and social system.
 \vs p072 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{Educational courts ---} the juridical bodies connected with the state and regional school systems and associated with the executive and legislative branches of the educational administrative mechanism.
 \vs p072 2:16 \ublistelem{3.}\bibnobreakspace \bibemph{Industrial courts ---} the jurisdictional tribunals vested with full authority for the settlement of all economic misunderstandings.
-\vs p072 2:17 \pc The federal supreme court does not pass upon socio\hyp{}economic cases except upon the \bibfrac{3}{4}\ts{ers} vote of the 3\ts{rd} legislative branch of the national government, the house of elder statesmen. Otherwise, all decisions of the parental, educational, and industrial high courts are final.
+\vs p072 2:17 \pc The federal supreme court does not pass upon socio\hyp{}economic cases except upon the three\hyp{}quarters vote of the 3\ts{rd} legislative branch of the national government, the house of elder statesmen. Otherwise, all decisions of the parental, educational, and industrial high courts are final.
 \usection{The Home Life}
 \vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Andites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
 \vs p072 3:2 The home life of this people has greatly improved during the last century. Attendance of parents, both fathers and mothers, at the parental schools of child culture is compulsory. Even the agriculturists who reside in small country settlements carry on this work by correspondence, going to the near\hyp{}by centres for oral instruction once in 10 days --- every two weeks, for they maintain a 5\hyp{}day week.
@@ -48,12 +48,12 @@
 \vs p072 3:6 Until 20 years ago the spiritual teachers (comparable to Urantia pastors), who visit each family periodically to examine the children to ascertain if they have been properly instructed by their parents, were under governmental supervision. These spiritual advisers and examiners are now under the direction of the newly created Foundation of Spiritual Progress, an institution supported by voluntary contributions. Possibly this institution may not further evolve until after the arrival of a Paradise Magisterial Son.
 \vs p072 3:7 \pc Children remain legally subject to their parents until they are 15, when the first initiation into civic responsibility is held. Thereafter, every 5 years for 5 successive periods similar public exercises are held for such age groups at which their obligations to parents are lessened, while new civic and social responsibilities to the state are assumed. Suffrage is conferred at 20, the right to marry without parental consent is not bestowed until 25, and children must leave home on reaching the age of 30.
 \vs p072 3:8 Marriage and divorce laws are uniform throughout the nation. Marriage before 20 --- the age of civil enfranchisement --- is not permitted. Permission to marry is only granted after one year’s notice of intention, and after both bride and groom present certificates showing that they have been duly instructed in the parental schools regarding the responsibilities of married life.
-\vs p072 3:9 Divorce regulations are somewhat lax, but decrees of separation, issued by the parental courts, may not be had until one year after application therefor has been recorded, and the year on this planet is considerably longer than on Urantia. Notwithstanding their easy divorce laws, the present rate of divorces is only \bibfrac{1}{10}\ts{th} that of the civilized races of Urantia.
+\vs p072 3:9 Divorce regulations are somewhat lax, but decrees of separation, issued by the parental courts, may not be had until one year after application therefor has been recorded, and the year on this planet is considerably longer than on Urantia. Notwithstanding their easy divorce laws, the present rate of divorces is only one tenth that of the civilized races of Urantia.
 \usection{The Educational System}
 \vs p072 4:1 The educational system of this nation is compulsory and coeducational in the precollege schools that the student attends from the ages of 5 to 18. These schools are vastly different from those of Urantia. There are no classrooms, only one study is pursued at a time, and after the first three years all pupils become assistant teachers, instructing those below them. Books are used only to secure information that will assist in solving the problems arising in the school shops and on the school farms. Much of the furniture used on the continent and the many mechanical contrivances --- this is a great age of invention and mechanization --- are produced in these shops. Adjacent to each shop is a working library where the student may consult the necessary reference books. Agriculture and horticulture are also taught throughout the entire educational period on the extensive farms adjoining every local school.
 \vs p072 4:2 \pc The feeble\hyp{}minded are trained only in agriculture and animal husbandry, and are committed for life to special custodial colonies where they are segregated by sex to prevent parenthood, which is denied all subnormals. These restrictive measures have been in operation for 75 years; the commitment decrees are handed down by the parental courts.
 \vs p072 4:3 \pc Everyone takes one month’s vacation each year. The precollege schools are conducted for 9 months out of the year of 10, the vacation being spent with parents or friends in travel. This travel is a part of the adult\hyp{}education program and is continued throughout a lifetime, the funds for meeting such expenses being accumulated by the same methods as those employed in old\hyp{}age insurance.
-\vs p072 4:4 \bibfrac{1}{4}\ts{er} of the school time is devoted to play --- competitive athletics --- the pupils progressing in these contests from the local, through the state and regional, and on to the national trials of skill and prowess. Likewise, the oratorical and musical contests, as well as those in science and philosophy, occupy the attention of students from the lower social divisions on up to the contests for national honours.
+\vs p072 4:4 One quarter of the school time is devoted to play --- competitive athletics --- the pupils progressing in these contests from the local, through the state and regional, and on to the national trials of skill and prowess. Likewise, the oratorical and musical contests, as well as those in science and philosophy, occupy the attention of students from the lower social divisions on up to the contests for national honours.
 \vs p072 4:5 The school government is a replica of the national government with its three correlated branches, the teaching staff functioning as the third or advisory legislative division. The chief object of education on this continent is to make every pupil a self\hyp{}supporting citizen.
 \vs p072 4:6 Every child graduating from the precollege school system at 18 is a skilled artisan. Then begins the study of books and the pursuit of special knowledge, either in the adult schools or in the colleges. When a brilliant student completes his work ahead of schedule, he is granted an award of time and means wherewith he may execute some pet project of his own devising. The entire educational system is designed to adequately train the individual.
 \usection{Industrial Organization}
@@ -84,16 +84,16 @@
 \vs p072 7:2 In all industry first attention is paid to health; certain phases of physical well\hyp{}being are regarded as industrial and community prerogatives, but individual and family health problems are matters of personal concern only. In medicine, as in all other purely personal matters, it is increasingly the plan of government to refrain from interfering.
 \vs p072 7:3 \pc Cities have no taxing power, neither can they go in debt. They receive per capita allowances from the state treasury and must supplement such revenue from the earnings of their socialistic enterprises and by licensing various commercial activities.
 \vs p072 7:4 The rapid\hyp{}transit facilities, which make it practical greatly to extend the city boundaries, are under municipal control. The city fire departments are supported by the fire\hyp{}prevention and insurance foundations, and all buildings, in city or country, are fireproof --- have been for over 75 years.
-\vs p072 7:5 There are no municipally appointed peace officers; the police forces are maintained by the state governments. This department is recruited almost entirely from the unmarried men between 25 and 50. Most of the states assess a rather heavy bachelor tax, which is remitted to all men joining the state police. In the average state the police force is now only \bibfrac{1}{10}\ts{th} as large as it was 50 years ago.
+\vs p072 7:5 There are no municipally appointed peace officers; the police forces are maintained by the state governments. This department is recruited almost entirely from the unmarried men between 25 and 50. Most of the states assess a rather heavy bachelor tax, which is remitted to all men joining the state police. In the average state the police force is now only one tenth as large as it was 50 years ago.
 \vs p072 7:6 \pc There is little or no uniformity among the taxation schemes of the 100 comparatively free and sovereign states as economic and other conditions vary greatly in different sections of the continent. Every state has 10 basic constitutional provisions which cannot be modified except by consent of the federal supreme court, and one of these articles prevents levying a tax of more than 1\% on the value of any property in any one year, homesites, whether in city or country, being exempted.
-\vs p072 7:7 The federal government cannot go in debt, and a \bibfrac{3}{4}\ts{ths} referendum is required before any state can borrow except for purposes of war. Since the federal government cannot incur debt, in the event of war the National Council of Defence is empowered to assess the states for money, as well as for men and materials, as it may be required. But no debt may run for more than 25 years.
+\vs p072 7:7 The federal government cannot go in debt, and a three\hyp{}fourths referendum is required before any state can borrow except for purposes of war. Since the federal government cannot incur debt, in the event of war the National Council of Defence is empowered to assess the states for money, as well as for men and materials, as it may be required. But no debt may run for more than 25 years.
 \vs p072 7:8 \pc Income to support the federal government is derived from the following 5 sources:
 \vs p072 7:9 \ublistelem{1.}\bibnobreakspace \bibemph{Import duties.} All imports are subject to a tariff designed to protect the standard of living on this continent, which is far above that of any other nation on the planet. These tariffs are set by the highest industrial court after both houses of the industrial congress have ratified the recommendations of the chief executive of economic affairs, who is the joint appointee of these two legislative bodies. The upper industrial house is elected by labour, the lower by capital.
 \vs p072 7:10 \ublistelem{2.}\bibnobreakspace \bibemph{Royalties.} The federal government encourages invention and original creations in the 10 regional laboratories, assisting all types of geniuses --- artists, authors, and scientists --- and protecting their patents. In return the government takes one half the profits realized from all such inventions and creations, whether pertaining to machines, books, artistry, plants, or animals.
 \vs p072 7:11 \ublistelem{3.}\bibnobreakspace \bibemph{Inheritance tax.} The federal government levies a graduated inheritance tax ranging from 1\% to 50\%, depending on the size of an estate as well as on other conditions.
 \vs p072 7:12 \ublistelem{4.}\bibnobreakspace \bibemph{Military equipment.} The government earns a considerable sum from the leasing of military and naval equipment for commercial and recreational usages.
 \vs p072 7:13 \ublistelem{5.}\bibnobreakspace \bibemph{Natural resources.} The income from natural resources, when not fully required for the specific purposes designated in the charter of federal statehood, is turned into the national treasury.
-\vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, \bibfrac{1}{4}\ts{er} being elected every 6 years. Every 6 years this body, by a \bibfrac{3}{4}\ts{ths} ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
+\vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, one quarter being elected every 6 years. Every 6 years this body, by a three\hyp{}fourths ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
 \usection{The Special Colleges}
 \vs p072 8:1 In addition to the basic compulsory education program extending from the ages of 5 to 18, special schools are maintained as follows:
 \vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of three classes: national, regional, and state. The public offices of the nation are grouped in 4 divisions. The 1\ts{st} division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the 2\ts{nd} division upon graduating from any one of the 10 regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division 3 includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The 4\ts{th} and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
